tests/baselines/reference/taggedTemplatesWithIncompleteTemplateExpressions4.errors.txt
taggedTemplatesWithIncompleteTemplateExpressions4.ts(5,24): error TS1109: Expression expected.
taggedTemplatesWithIncompleteTemplateExpressions4.ts(5,27): error TS1109: Expression expected.
taggedTemplatesWithIncompleteTemplateExpressions4.ts(5,28): error TS1005: '}' expected.
taggedTemplatesWithIncompleteTemplateExpressions4.ts(5,28): error TS2554: Expected 3 arguments, but got 4.


==== taggedTemplatesWithIncompleteTemplateExpressions4.ts (4 errors) ====
    function f(x: TemplateStringsArray, y: string, z: string) {
    }
    
    // Incomplete call, but too many parameters.
    f `123qdawdrqw${ 1 }${ }${ 
                           ~
!!! error TS1109: Expression expected.
                              
!!! error TS1109: Expression expected.
                               
!!! error TS1005: '}' expected.
                               
!!! error TS2554: Expected 3 arguments, but got 4.